--- a/static/results.css
+++ b/static/results.css
@@ -4,3 +4,7 @@ footer {
   background-color: rgb(196, 186, 189);
   text-align: center;
 }
+
+img {
+  width: 100%;
+}
